Add mobile controls for gameplay, including touch sticks for movement and buttons for shooting and jumping. Update main.js to handle mobile input and adjust player controls accordingly. Enhance styles.css for mobile UI elements.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
       </div>
     </div>
 
+    <!-- Mobile controls overlay -->
+    <div id="mobileControls" class="hidden">
+      <div id="stickL" class="stick"><div class="knob"></div></div>
+      <div id="stickR" class="stick"><div class="knob"></div></div>
+      <button id="btnShoot" class="mobile-btn primary">Shoot</button>
+      <button id="btnJump" class="mobile-btn">Jump</button>
+    </div>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html> 
