--- a/index.html
+++ b/index.html
@@ -14,19 +14,33 @@
         }
       }
     </script>
-    <!-- TFJS (global). Depth model is loaded dynamically with fallbacks in main.js. -->
+    <!-- TFJS (global) kept only for future; depth is now inferred via ONNX Runtime Web. -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.20.0/dist/tf.min.js" defer></script>
+    <!-- ONNX Runtime Web for local MiDaS model inference -->
+    <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web@1.17.3/dist/ort.min.js" defer></script>
   </head>
   <body>
     <div id="splash" class="show">
       <div class="splash-inner">
         <img id="splashImg" src="./splash.png" alt="" />
         <button id="splashUploadBtn" class="primary">Upload image</button>
+        <button id="splashCameraBtn">Use camera</button>
       </div>
     </div>
 
-    <!-- Hidden file input used by the splash Upload button -->
-    <input id="faceFile" type="file" accept="image/*" hidden />
+    <!-- Hidden file input used by the splash Upload button (front camera on mobile) -->
+    <input id="faceFile" type="file" accept="image/*" capture="user" hidden />
+
+    <!-- Camera overlay -->
+    <div id="cameraOverlay" class="hidden">
+      <div class="camera-card">
+        <video id="cameraVideo" autoplay playsinline></video>
+        <div class="camera-actions">
+          <button id="cameraCaptureBtn" class="primary">Capture</button>
+          <button id="cameraCancelBtn">Cancel</button>
+        </div>
+      </div>
+    </div>
 
     <div id="ui">
       <div class="row">
@@ -40,6 +54,9 @@
       </div>
     </div>
 
+    <!-- Minimap overlay -->
+    <canvas id="minimap" width="180" height="180"></canvas>
+
     <!-- Mobile controls overlay -->
     <div id="mobileControls" class="hidden">
       <div id="stickL" class="stick"><div class="knob"></div></div>
@@ -48,6 +65,6 @@
       <button id="btnJump" class="mobile-btn">Jump</button>
     </div>
 
-    <script type="module" src="./main.js?v=umd-004"></script>
+    <script type="module" src="./main.js?v=onnx-001"></script>
   </body>
 </html> 
