--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
     <!-- Minimap overlay -->
     <canvas id="minimap" width="180" height="180"></canvas>
+    <!-- Crosshair overlay -->
+    <div id="crosshair" aria-hidden="true"></div>
 
     <!-- Mobile controls overlay -->
     <div id="mobileControls" class="hidden">
