Refactor mobile controls and enhance gameplay experience: Update main.js to hide the Play button and implement pointer locking for improved user interaction. Revise index.html to simplify hint text. Adjust styles.css for mobile control sizes and button placements, ensuring better usability on touch devices.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <button id="startBtn" disabled>Play (lock mouse)</button>
       </div>
       <div class="row small">
-        <span id="hint">Click Play to lock the mouse. WASD to move, mouse to look, Space to jump. Esc to unlock.</span>
+        <span id="hint">WASD to move, mouse to look, Space to jump. Esc to unlock.</span>
       </div>
       <div class="row small">
         <span id="status">Waiting for image…</span>
