Add end-of-game modal and refine mobile controls: Implement an end modal in index.html to display game results. Enhance main.js with improved mobile shooting mechanics and agent behavior, including panic responses. Update styles.css for end modal styling and mobile control visibility adjustments.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
       </div>
     </div>
 
+    <!-- End-of-game modal -->
+    <div id="endModal" class="hidden">
+      <div class="modal-card">
+        <h2 id="endTitle">You Win!</h2>
+        <p id="endSubtitle">HP: 100 | Kills: 0</p>
+        <button id="endCta" class="primary">Back to menu</button>
+      </div>
+    </div>
+
     <div id="ui">
       <div class="row">
         <button id="startBtn" disabled>Play (lock mouse)</button>
