Add processing image overlay and enhance terrain generation: Introduce a processing overlay in index.html to display the captured image during terrain generation. Update main.js to manage the overlay visibility and integrate it into the terrain creation workflow. Revise styles.css to style the processing overlay and canvas for better user experience.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
       </div>
     </div>
 
+    <!-- Processing image overlay (shows captured/uploaded image while generating terrain) -->
+    <div id="processingOverlay" class="hidden">
+      <canvas id="processingCanvas"></canvas>
+    </div>
+
     <!-- End-of-game modal -->
     <div id="endModal" class="hidden">
       <div class="modal-card">
