Add hit border overlay and random damage mechanics: Introduce a hit border overlay in index.html to visually indicate player damage. Update main.js to implement random damage calculations for player health and trigger the hit border effect. Revise styles.css to style the hit border for better visibility during gameplay.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
       <canvas id="processingCanvas"></canvas>
     </div>
 
+    <!-- Hit border overlay -->
+    <div id="hitBorder"></div>
+
     <!-- End-of-game modal -->
     <div id="endModal" class="hidden">
       <div class="modal-card">
