Add HP bar to UI and update game status display: Introduce a health points (HP) bar in index.html to visually represent player health. Update main.js to manage HP bar scaling based on player health and revise the game HUD to include the HP bar. Enhance styles.css to style the HP bar and its fill for better visibility during gameplay.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
     <!-- Hit border overlay -->
     <div id="hitBorder"></div>
 
+    <!-- HP bar -->
+    <div id="hpBar"><div id="hpFill"></div></div>
+
     <!-- End-of-game modal -->
     <div id="endModal" class="hidden">
       <div class="modal-card">
